# mcfost

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md
src/: .depend  CMakeLists.txt  ML_prodimo.f90  MRW.f90  Makefile  PAH.f90  Pascucci_3.0.para  SPH2mcfost.f90  Temperature.f90  Voro++.cpp  Voronoi.f90  abundance.input  arb2mcfost.f90  astrochem_wrapper.c  benchmarks.f90  coated_sphere.f90  cockchafer.cpp  cockchafer.hpp  compile.sh  constants.f90  cylindrical_grid.f90  density.f90  diffusion.f90  disk_physics.f90  dust.f90  dust_prop.f90  dust_ray_tracing.f90  dust_transfer.f90  fits_utils.f90  for_astrochem.f90  fsolve.f90  gadget2.limits  grains.f90  grid.f90  hdf5_utils.f90  healpix_mod.f90  hilbert.f90  init_mcfost.f90  init_mrw.f90  input.f90  (+89 more)
src/Atoms/: accelerate.f90  atmos_type.f90  atom_transfer.f90  atom_type.f90  atomictransfer.f90  background_opacity.f90  barklem.f90  broad.f90  collision.f90  constant.f90  contribution_function.f90  getlambda.f90  getline.f90  grid_type.f90  hydrogen.f90  impact.f90  init_solution.f90  io_atomic_pops.f90  io_opacity.f90  lte.f90  math.f90  metal.f90  occupation_probability.f90  opacity.f90  planck.f90  profilefunctions.f90  profiles.f90  project.f90  rayleigh_scattering.f90  read_pluto.f90  readatmos.f90  readatom.f90  simple_models.f90  solve_transfer.f90  solvene.f90  special_functions.f90  spectrum_type.f90  stark.f90  statequil_atoms.f90  test_modules.f90  (+7 more)
src/gas/: abo.f90  atom_transfer.f90  atom_type.f90  barklem.f90  broad.f90  collision_atom.f90  escape.f90  (+10 more)
(+166 files in other folders)
